--- a/src/bithumb.api.s20/bithumb.api.s20.csproj
+++ b/src/bithumb.api.s20/bithumb.api.s20.csproj
@@ -7,10 +7,10 @@
     <AssemblyTitle>Bithumb.API.Core</AssemblyTitle>
     <VersionPrefix>1.0.0</VersionPrefix>
     <Authors>SEONGAHN LEE</Authors>
-    <TargetFramework>netstandard1.6</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>Bithumb.API</AssemblyName>
     <PackageId>Bithumb.API.Core</PackageId>
-    <PackageTags>odinsoft;sdk;api;bitcoin;btc;ethereum;eth</PackageTags>
+    <PackageTags>odinsoft;sdk;trading-api;bitcoin;cryptocurrency</PackageTags>
     <PackageIconUrl>https://github.com/lisa3907/bithumb.csharp/blob/master/logo-files/bithumb.api.ico?raw=true</PackageIconUrl>
     <PackageProjectUrl>https://github.com/lisa3907/bithumb.csharp</PackageProjectUrl>
     <PackageLicenseUrl>https://github.com/lisa3907/bithumb.csharp/blob/master/LICENSE</PackageLicenseUrl>
@@ -21,7 +21,7 @@
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
     <RootNamespace>Bithumb.API</RootNamespace>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-    <Version>1.0.3</Version>
+    <Version>2.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
