convert standard library to core library

--- a/src/bithumb.sample.c20/bithumb.sample.c20.csproj
+++ b/src/bithumb.sample.c20/bithumb.sample.c20.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\bithumb.api.s20\bithumb.api.s20.csproj" />
+    <ProjectReference Include="..\bithumb.api.c20\bithumb.api.c20.csproj" />
   </ItemGroup>
 
 </Project>
