--- a/src/bithumb.api/bithumb.api.csproj
+++ b/src/bithumb.api/bithumb.api.csproj
@@ -3,14 +3,14 @@
   <PropertyGroup>
     <Title>Bithumb RESTFul API</Title>
     <Description>C# Bithumb RESTFul API</Description>
-    <Copyright>Copyright OdinSoftware Co., Ltd. 2017</Copyright>
+    <Copyright>Copyright OdinSoftware Co., Ltd. 2017~2018</Copyright>
     <AssemblyTitle>Bithumb.API.Core</AssemblyTitle>
     <VersionPrefix>1.0.0</VersionPrefix>
     <Authors>SEONGAHN LEE</Authors>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFrameworks>net47;netcoreapp2.0</TargetFrameworks>
     <AssemblyName>Bithumb.API</AssemblyName>
     <PackageId>Bithumb.API.Core</PackageId>
-    <PackageTags>odinsoft;sdk;trading-api;bitcoin;cryptocurrency</PackageTags>
+    <PackageTags>coin-sdk;trading-api;cryptocurrency;bithumb;bitcoin</PackageTags>
     <PackageIconUrl>https://github.com/lisa3907/bithumb.csharp/blob/master/logo-files/bithumb.api.ico?raw=true</PackageIconUrl>
     <PackageProjectUrl>https://github.com/lisa3907/bithumb.csharp</PackageProjectUrl>
     <PackageLicenseUrl>https://github.com/lisa3907/bithumb.csharp/blob/master/LICENSE</PackageLicenseUrl>
@@ -21,13 +21,14 @@
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
     <RootNamespace>Bithumb.API</RootNamespace>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-    <Version>2.0.1</Version>
+    <Version>2.0.2</Version>
+    <PackageReleaseNotes>update balance, ticker, transaction</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.0.1" />
     <PackageReference Include="Microsoft.Win32.Registry" Version="4.4.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="11.0.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="OdinSdk.BaseLib.Core" Version="2.0.1" />
     <PackageReference Include="RestSharp.NetCore" Version="105.2.3" />
     <PackageReference Include="System.Net.NameResolution" Version="4.3.0" />
