convert namespace to CCXT.NET & Balance class update & public transaction history API update

--- a/src/bithumb.sample/bithumb.sample.csproj
+++ b/src/bithumb.sample/bithumb.sample.csproj
@@ -7,6 +7,10 @@
     <RootNamespace>Bithumb.Sample</RootNamespace>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net47|AnyCPU'">
+    <DocumentationFile>bin\Debug\net47\Bithumb.Sample.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="System.Text.Encoding.CodePages" Version="4.4.0" />
   </ItemGroup>
