--- a/src/bithumb.api/bithumb.api.csproj
+++ b/src/bithumb.api/bithumb.api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <Title>Bithumb RESTFul API</Title>
@@ -7,9 +7,9 @@
     <AssemblyTitle>Bithumb.API.Core</AssemblyTitle>
     <VersionPrefix>1.0.0</VersionPrefix>
     <Authors>SEONGAHN LEE</Authors>
-    <TargetFrameworks>net47;netcoreapp2.0</TargetFrameworks>
+    <TargetFrameworks>net462;net471;netcoreapp2.0</TargetFrameworks>
     <AssemblyName>Bithumb.API</AssemblyName>
-    <PackageId>Bithumb.API.Core</PackageId>
+    <PackageId>Bithumb.API</PackageId>
     <PackageTags>coin-sdk;trading-api;cryptocurrency;bithumb;bitcoin</PackageTags>
     <PackageIconUrl>https://github.com/lisa3907/bithumb.csharp/blob/master/logo-files/bithumb.api.ico?raw=true</PackageIconUrl>
     <PackageProjectUrl>https://github.com/lisa3907/bithumb.csharp</PackageProjectUrl>
@@ -21,8 +21,8 @@
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
     <RootNamespace>Bithumb.API</RootNamespace>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-    <Version>2.0.3</Version>
-    <PackageReleaseNotes>update balance, ticker, transaction, completeorders</PackageReleaseNotes>
+    <Version>2.1.0</Version>
+    <PackageReleaseNotes>update net462;net471;netcore2.0</PackageReleaseNotes>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net47|AnyCPU'">
@@ -30,11 +30,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.0.2" />
     <PackageReference Include="Microsoft.Win32.Registry" Version="4.4.0" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
-    <PackageReference Include="OdinSdk.BaseLib.Core" Version="2.0.1" />
-    <PackageReference Include="RestSharp.NetCore" Version="105.2.3" />
+    <PackageReference Include="OdinSdk.BaseLib" Version="2.1.0" />
     <PackageReference Include="System.Net.NameResolution" Version="4.3.0" />
     <PackageReference Include="System.Net.NetworkInformation" Version="4.3.0" />
     <PackageReference Include="System.Runtime.Serialization.Formatters" Version="4.3.0" />
